# processlab

./: CHANGELOG.md  LICENSE  README.md  logistic_growth.csv  main.py  output.csv  pyproject.toml
docs/source/: conf.py  examples.rst  index.rst  installation.rst  license.rst  quickstart.rst
docs/source/api/: core.rst  events.rst  recorders.rst  simulation.rst
examples/: logistic_growth.py  simple.py  simple_dynamic.py
processlab/: __init__.py
processlab/core/: model.py  nodes.py
processlab/simulation/: events.py  integrators.py  listener.py  recorders.py  simulation.py
