[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "processlab"
version = "0.1.0"
description = "A dynamic systems simulation library with computational graph capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Euan Russano", email = "euanrussano@example.com"}
]
keywords = ["simulation", "dynamical-systems", "numerical-methods", "ode", "computational-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies (what users need to run your package)
dependencies = [
    "numpy>=2.0.0",
]

[project.optional-dependencies]
# Visualization features
visualization = [
    "matplotlib>=3.5.0",
]

# Scientific computing (if you use scipy features)
scientific = [
    "scipy>=1.10.0",
    "networkx>=3.0",
]

# All optional features
all = [
    "matplotlib>=3.5.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "mypy-extensions>=1.0.0",
    "numpy-typing-compat>=20251206.0",
    "scipy-stubs>=1.17.0",
    "networkx-stubs>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/euanrussano/processlab"
Repository = "https://github.com/euanrussano/processlab"
"Bug Tracker" = "https://github.com/euanrussano/processlab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["processlab*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false